# precinct

./: .gitignore  .python-version  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
extensions/vscode/: .gitignore  CHANGELOG.md  README.md  extension.js  package.json
extensions/vscode/test/suite/: index.js
precinct/: connection.py  logging.py  main.py  models.py  prompts.yml
precinct-vscode/: README.md  extension.js  package.json
test/: test_precinct.py
