[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "precinct"
version = "0.1.4"
description = "Your SQL query AI copilot"
authors = [
  {name = "mark.snidal@gmail.com", email = "mark.snidal@gmail.com"}
]
license = {file = "LICENSE"}
dependencies = [
  "psycopg2 ~= 2.9",
  "types-psycopg2 ~= 2.9",
  "click ~= 8.1",
  "openai ~= 0.28",
  "pydantic ~= 2.4",
  "sqlparse ~= 0.4",
  "instructor ~= 0.2",
  "pyperclip ~= 1.8",
  "cachetools ~= 5.3.2",
  "pyyaml ~= 6.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: SQL",
  "Topic :: Database",
  "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/msnidal/precinct"

[tool.setuptools]
packages = ["precinct"]

[project.optional-dependencies]
dev = [
    "black ~= 23.10.0",
    "isort ~= 5.12.0",
    "pytest ~= 7.1",
    "pytest-cov ~= 3.0",
]

[project.scripts]
precinct = "precinct.main:main"
